# patika-solana-bootcamp

./: Cargo.toml  start_database.sh
migrations/2022-09-05-153355_create_cats/: up.sql
src/: main.rs  models.rs  schema.rs
src/migrations/2022-09-05-153355_create_cats/: down.sql
static/: add.html  cat.html  index.html
static/css/: index.css
