[package]
name = "patika-solana-bootcamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
handlebars = { version = "3.0.1", features = ["dir_source"] }
serde_json = "1.0.85"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
serde = "1.0.144"
r2d2 = "0.8.10"
awmp = "0.8.1"
